gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice6.C
// PR c++/51464
// { dg-do compile { target c++11 } }

template<int = sizeof([])> struct A {}; // { dg-error "" } 
